<resources>
    <string name="app_name">firstTask</string>
    <string name="square">x<sup><small>2</small></sup></string>
    <string name="square_root">&#8730; </string>
    <string name="backspace">&#9668; </string>
    <string name="clean">C</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="division">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiply">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="Settings">Настройки</string>
    <string name="text_switch_night_theme">Ночная тема</string>
    <string name="Назад">назад</string>
</resources>