<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nature_sky"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/button_square"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_square_root"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginHorizontal="2dp"
        android:text="@string/square"
        android:textSize="25sp"
        />

    <Button
        android:id="@+id/button_square_root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_8"
        app:layout_constraintStart_toEndOf="@id/button_square"
        app:layout_constraintEnd_toStartOf="@id/button_delete"
        app:layout_constraintVertical_chainStyle="packed"

        android:layout_marginHorizontal="2dp"
        android:text="@string/square_root"
        android:textSize="25sp"  />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_9"
        app:layout_constraintStart_toEndOf="@id/button_square_root"
        app:layout_constraintEnd_toStartOf="@id/button_backspace"
        app:layout_constraintVertical_chainStyle="packed"

        android:layout_marginHorizontal="2dp"
        android:text="@string/clean"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button_backspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_div"
        app:layout_constraintStart_toEndOf="@id/button_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"

        android:layout_marginHorizontal="2dp"
        android:text="@string/backspace"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_square"
        app:layout_constraintBottom_toTopOf="@id/button_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_8"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginHorizontal="2dp"
        android:text="@string/_7"
        android:textSize="25sp"
        />

    <Button
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/button_7"
        app:layout_constraintEnd_toStartOf="@id/button_9"
        app:layout_constraintTop_toBottomOf="@id/button_square_root"
        app:layout_constraintBottom_toTopOf="@id/button_5"
        android:layout_marginHorizontal="2dp"
        android:text="@string/_8"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/button_8"
        app:layout_constraintEnd_toStartOf="@id/button_div"
        app:layout_constraintTop_toBottomOf="@id/button_delete"
        app:layout_constraintBottom_toTopOf="@id/button_6"
        android:layout_marginHorizontal="2dp"
        android:text="@string/_9"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/button_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/button_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_backspace"
        app:layout_constraintBottom_toTopOf="@id/button_multiply"
        android:layout_marginHorizontal="2dp"
        android:text="@string/division"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_5"
        app:layout_constraintTop_toBottomOf="@id/button_7"
        app:layout_constraintBottom_toTopOf="@id/button_1"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:text="@string/_4"
        android:textSize="25sp"
        android:layout_marginHorizontal="2dp"
        />

    <Button
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_8"
        app:layout_constraintBottom_toTopOf="@id/button_point"
        app:layout_constraintStart_toEndOf="@id/button_4"
        app:layout_constraintEnd_toStartOf="@id/button_6"
        android:text="@string/_5"
        android:textSize="25sp"
        android:layout_marginHorizontal="2dp"/>
    <Button
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_9"
        app:layout_constraintBottom_toTopOf="@id/button_3"
        app:layout_constraintStart_toEndOf="@id/button_5"
        app:layout_constraintEnd_toStartOf="@id/button_multiply"
        android:text="@string/_6"
        android:textSize="25sp"
        android:layout_marginHorizontal="2dp"/>
    <Button
        android:id="@+id/button_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_div"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintStart_toEndOf="@id/button_6"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/multiply"
        android:textSize="25sp"
        android:layout_marginHorizontal="2dp"/>

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_4"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:text="@string/_1"
        android:textSize="25sp"
        android:layout_marginHorizontal="2dp"
        />

    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_5"
        app:layout_constraintBottom_toTopOf="@id/button_point"
        app:layout_constraintStart_toEndOf="@id/button_1"
        app:layout_constraintEnd_toStartOf="@id/button_3"
        android:text="@string/_2"
        android:textSize="25sp"
        android:layout_marginHorizontal="2dp"/>

    <Button
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_6"
        app:layout_constraintBottom_toTopOf="@id/button_equal"
        app:layout_constraintStart_toEndOf="@id/button_2"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        android:text="@string/_3"
        android:textSize="25sp"
        android:layout_marginHorizontal="2dp"/>
    <Button
        android:id="@+id/button_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_multiply"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintStart_toEndOf="@id/button_3"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/minus"
        android:textSize="25sp"
        android:layout_marginHorizontal="2dp"/>

    <Button
        android:id="@+id/button_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_point"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:text="@string/_0"
        android:textSize="25sp"
        android:layout_marginHorizontal="2dp"
        />

    <Button
        android:id="@+id/button_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_0"
        app:layout_constraintEnd_toStartOf="@id/button_equal"
        android:text="@string/point"
        android:textSize="25sp"
        android:layout_marginHorizontal="2dp"/>

    <Button
        android:id="@+id/button_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_point"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        android:text="@string/equal"
        android:textSize="25sp"
        android:layout_marginHorizontal="2dp"
        />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_equal"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/plus"
        android:textSize="25sp"
        android:layout_marginHorizontal="2dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>




    <!--android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/nature_sky"
    android:paddingHorizontal="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/button_square"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="@string/square"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button_square_root"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/square_root"
            android:textSize="25sp"
            android:layout_marginHorizontal="5dp"/>
        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clean"
            android:textSize="25sp"
            android:layout_marginHorizontal="5dp"/>
        <Button
            android:id="@+id/button_backspace"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/backspace"
            android:textSize="25sp"
            android:layout_marginHorizontal="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_7"
            android:textSize="25sp"
            android:layout_marginHorizontal="5dp"
            />

        <Button
            android:id="@+id/button_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_8"
            android:textSize="25sp"
            android:layout_marginHorizontal="5dp"/>
        <Button
            android:id="@+id/button_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_9"
            android:textSize="25sp"
            android:layout_marginHorizontal="5dp"/>
        <Button
            android:id="@+id/button_div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/division"
            android:textSize="25sp"
            android:layout_marginHorizontal="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textSize="25sp"
            android:layout_marginHorizontal="5dp"
            />

        <Button
            android:id="@+id/button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_5"
            android:textSize="25sp"
            android:layout_marginHorizontal="5dp"/>
        <Button
            android:id="@+id/button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_6"
            android:textSize="25sp"
            android:layout_marginHorizontal="5dp"/>
        <Button
            android:id="@+id/button_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:textSize="25sp"
            android:layout_marginHorizontal="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textSize="25sp"
            android:layout_marginHorizontal="5dp"
            />

        <Button
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_2"
            android:textSize="25sp"
            android:layout_marginHorizontal="5dp"/>
        <Button
            android:id="@+id/button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_3"
            android:textSize="25sp"
            android:layout_marginHorizontal="5dp"/>
        <Button
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textSize="25sp"
            android:layout_marginHorizontal="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_0"
            android:textSize="25sp"
            android:layout_marginHorizontal="5dp"
            />

        <Button
            android:id="@+id/button_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/point"
            android:textSize="25sp"
            android:layout_marginHorizontal="5dp"/>

        <Button
            android:id="@+id/button_equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/equal"
            android:textSize="25sp"
            android:layout_marginHorizontal="5dp"
            />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textSize="25sp"
            android:layout_marginHorizontal="5dp"/>
    </LinearLayout>-->